--- a/Web/Test.html
+++ b/Web/Test.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Testing Here</title>
-</head>
-<body>
-    <p1><b><i>Hi sajan </i></b></p1>
-    <br>
-    <p3>Welcome guys </p3>
-</body>
-</html>
+<HTML>
+    <BODY>
+     Hello! The time is now <%= new java.util.Date() %>
+    </BODY>
+    </HTML>
